6.01.06

-BUG FIX: Fixed error "No...data received...file /cache/secured/a*********s/ip_XX*********X.dat (aborting...)", originating in prune_access_stats() (called during scheduled maintenance), which occurred when no stats remained AFTER PRUNING any outdated access stats (the stats file is properly deleted now). You can safely ignore past error logging that looks like this. Sorry!

-BUG FIX: Fixed edge-cases where updating the CACHED application configuration could FAIL (any updates now initiate a 2 second pause AFTER, so any file locks release on slower machines, in case an additional update needs to happen during the same runtime)

-BUG FIX: Fixed throttled APIs (like AlphaVantage FREE tier) not allowing LIGHT CHART REBUILDS (which caused related price charts to not appear in the user interface, AFTER resetting light charts) Sorry!

-BUG FIX: Fixes for time period (light) price charts reliability, where they would have GAPS between data points, greater then the time intervals set for that particular time period chart

-BUG FIX: Fixes for price charts importing reliability, where they would not properly REBUILD the time period (light) charts

-BUG FIX: Miscellaneous (minor)

-We now SKIP including light charts in chart backup ZIP files, so the backup will be significantly smaller for large chart collections (we automatically rebuild light charts from archival charts if they don't exist, so we don't require backing them up)

-Overhauled upgrade system, that now supports importing config backups (safely)

-More reliable plugin validity checks

-Minor user experience improvements

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.07

-BUG FIX: TBD

-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)

-------------------------------------------------------------------






