@@ -297,6 +297,24 @@ echo " "
 ######################################
 
 
+# Graphical-based apps must be redirected to the tty, to work
+# correctly *IN A SUBSHELL* (this ALSO works fine NOT in a subshell too).
+launch_graphical_safe() {
+
+     if [ ! -z "$1" ]; then
+
+         output=$(
+         $1 < /dev/tty > /dev/tty
+         )
+     
+     fi
+
+}
+
+
+######################################
+
+
 # Path to app (CROSS-DISTRO-COMPATIBLE)
 get_app_path() {
 
@@ -578,7 +596,7 @@ echo "${reset} "
 
     if [ "$key" = 'f' ] || [ "$key" = 'F' ]; then
 
-    sudo armbian-config
+    launch_graphical_safe "sudo armbian-config"
     
     sleep 1
 
@@ -2371,7 +2389,7 @@ select opt in $OPTIONS; do
 				echo " "
 				echo "${cyan}Initiating raspi-config, please wait...${reset}"
 				# WE NEED SUDO HERE, or raspi-config fails in bash
-				sudo raspi-config
+				launch_graphical_safe "sudo raspi-config"
 				elif [ -f /boot/dietpi/.version ]; then
 				echo " "
 				echo "${cyan}Initiating dietpi-software, please wait...${reset}"
